[package]
name = "adfaure"
version = "0.1.0"
authors = ["FAURE Adrien <adrien.faure2@gmail.com>"]

[dependencies]
time = "*"
specs = "0.8.1"
pulse = { version = "0.5", optional = true }
xml-rs = "0.4"
serde = "1.0"
tmx = { git = "https://github.com/adfaure/tmx" }
serde_derive = "1.0"
serde-xml-rs = "0.1.2"

[dependencies.sdl2]
version = "0.30"
default-features = false
features = [ "image" ]

[dependencies.rayon]
version = "0.7"
optional = true
features = ["unstable"]

[features]
default = ["parallel"]
parallel = ["pulse", "rayon"]

[[bin]]
name = "snake"
path = "src/main.rs"
