[package]
name = "adfaure"
version = "0.1.0"
authors = ["FAURE Adrien <adrien.faure2@gmail.com>"]

[dependencies]
piston = "0.32.0"
piston-shaders_graphics2d = "0.3.1"
find_folder = "0.3.0"
pistoncore-sdl2_window = "0.42.0"
piston2d-opengl_graphics = "0.43.1"
piston-texture = "0.5.0"
piston2d-graphics = "0.21.0"
image = "0.13.0"
rusttype = "0.2.0"
gl = "0.6.0"
shader_version = "0.2.0"
fnv = "1.0.2"

tmx = { git = "https://github.com/adfaure/tmx" }

specs = { git = "https://github.com/slide-rs/specs" }

rand = "0.3.15"

[build-dependencies]
khronos_api = "0.0.8"
